--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,11 @@ body {
   box-shadow: 3px 4px 5px var(--accent);
 }
 
+.form-control:focus {
+	border-color: black;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 3px 4px 5px var(--highlight);
+}
+
 ::selection {
   background-color: var(--accent);
   color: #ffffff;
