--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,3 +114,9 @@ span {
     margin-bottom: 50px;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+	.jumbotron {
+    background: linear-gradient(to bottom, black, var(--highlight));
+  }
+}
